--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,17 @@ before_install:
   - docker build -t 2dazed/docker-react-training -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true 2dazed/docker-react-training npm run test
+  - docker run -e CI=true 2dazed/docker-react-training npm run test -- --coverage
 
-
-
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "DockerReactTraining"
+  env: "DockerReactTraining-env"
+  bucket_name: "elasticbeanstalk-us-east-2-179783938766"
+  bucker_path: "DockerReactTraining"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
