--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
-  app: "DockerReactTraining"
+  app: "docker-react-training"
   env: "DockerReactTraining-env"
   bucket_name: "elasticbeanstalk-us-east-2-179783938766"
   bucker_path: "DockerReactTraining"
